Bug 65673 - [ivb] WARNING: at drivers/gpu/drm/i915/intel_display.c:1437 ironlake_crtc_disable
Summary: [ivb] WARNING: at drivers/gpu/drm/i915/intel_display.c:1437 ironlake_crtc_dis...
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: Other All
: medium normal
Assignee: Intel GFX Bugs mailing list
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
: 65674 (view as bug list)
Depends on:
Blocks:
 
Reported: 2013-06-12 12:47 UTC by Chris Wilson
Modified: 2017-07-24 22:58 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
dmesg (64.26 KB, text/plain)
2013-06-12 12:52 UTC, Chris Wilson
no flags Details

Description Chris Wilson 2013-06-12 12:47:27 UTC
[    1.178445] fbcon: inteldrmfb (fb0) is primary device
[    1.200706] ------------[ cut here ]------------
[    1.200709] WARNING: at drivers/gpu/drm/i915/intel_display.c:1437 ironlake_crtc_disable+0x872/0x8a0()
[    1.200711] CPU: 0 PID: 1 Comm: swapper/0 Not tainted 3.10.0-rc5+ #482
[    1.200712] Hardware name: Intel Corporation 2012 Client Platform/Emerald Lake 2, BIOS ACRVMBY1.86C.0078.P00.1201161002 01/16/2012
[    1.200714]  0000000000000009 ffff8802560bd4c0 ffffffff814a3406 ffff8802560bd4f8
[    1.200715]  ffffffff8103941b ffff88025550c000 ffff8802558d6000 ffff8802558c6000
[    1.200716]  ffff88025550e748 0000000000000000 ffff8802560bd508 ffffffff8103952a
[    1.200716] Call Trace:
[    1.200720]  [<ffffffff814a3406>] dump_stack+0x19/0x1b
[    1.200723]  [<ffffffff8103941b>] warn_slowpath_common+0x6b/0x90
[    1.200724]  [<ffffffff8103952a>] warn_slowpath_null+0x1a/0x20
[    1.200725]  [<ffffffff81310e42>] ironlake_crtc_disable+0x872/0x8a0
[    1.200726]  [<ffffffff813139a0>] intel_crtc_disable+0x30/0x130
[    1.200728]  [<ffffffff81314eed>] __intel_set_mode+0x2bd/0x1290
[    1.200731]  [<ffffffff8123081a>] ? string.isra.3+0x3a/0xd0
[    1.200733]  [<ffffffff8123081a>] ? string.isra.3+0x3a/0xd0
[    1.200733]  [<ffffffff8123081a>] ? string.isra.3+0x3a/0xd0
[    1.200734]  [<ffffffff81231641>] ? vsnprintf+0x461/0x640
[    1.200735]  [<ffffffff813185f6>] intel_set_mode+0x16/0x30
[    1.200737]  [<ffffffff81318dc2>] intel_crtc_set_config+0x7b2/0x970
[    1.200739]  [<ffffffff812d58be>] drm_mode_set_config_internal+0x2e/0x60
[    1.200742]  [<ffffffff812c1541>] drm_fb_helper_set_par+0x71/0xf0
[    1.200744]  [<ffffffff81260fa4>] fbcon_init+0x514/0x590
[    1.200747]  [<ffffffff812ae8ac>] visual_init+0x8c/0xe0
[    1.200748]  [<ffffffff812b0a05>] do_bind_con_driver+0x115/0x2a0
[    1.200750]  [<ffffffff812b1dd1>] do_take_over_console+0x61/0x70
[    1.200752]  [<ffffffff8125f493>] do_fbcon_takeover+0x63/0xc0
[    1.200754]  [<ffffffff81263015>] fbcon_event_notify+0x705/0x810
[    1.200756]  [<ffffffff81061bed>] notifier_call_chain+0x4d/0x70
[    1.200757]  [<ffffffff81061f88>] __blocking_notifier_call_chain+0x58/0x80
[    1.200759]  [<ffffffff81061fc6>] blocking_notifier_call_chain+0x16/0x20
[    1.200761]  [<ffffffff812572db>] fb_notifier_call_chain+0x1b/0x20
[    1.200762]  [<ffffffff81259356>] register_framebuffer+0x1d6/0x310
[    1.200764]  [<ffffffff812c1211>] drm_fb_helper_initial_config+0x371/0x540
[    1.200767]  [<ffffffff81339ac1>] intel_fbdev_initial_config+0x21/0x30
[    1.200769]  [<ffffffff812e770e>] i915_driver_load+0xe3e/0xe70
[    1.200771]  [<ffffffff812d08e6>] drm_get_pci_dev+0x176/0x2a0
[    1.200773]  [<ffffffff812e29ac>] i915_pci_probe+0x2c/0x70
[    1.200777]  [<ffffffff81350f77>] driver_probe_device+0x77/0x240
[    1.200778]  [<ffffffff813511eb>] __driver_attach+0xab/0xb0
[    1.200780]  [<ffffffff81351140>] ? driver_probe_device+0x240/0x240
[    1.200781]  [<ffffffff8134f29d>] bus_for_each_dev+0x5d/0xa0
[    1.200783]  [<ffffffff81350c9e>] driver_attach+0x1e/0x20
[    1.200784]  [<ffffffff8134fb7e>] bus_add_driver+0xfe/0x240
[    1.200786]  [<ffffffff818bb276>] ? ftrace_define_fields_drm_vblank_event+0x69/0x69
[    1.200787]  [<ffffffff81351867>] driver_register+0x77/0x170
[    1.200788]  [<ffffffff818bb276>] ? ftrace_define_fields_drm_vblank_event+0x69/0x69
[    1.200790]  [<ffffffff8124941c>] __pci_register_driver+0x4c/0x50
[    1.200791]  [<ffffffff812d0b25>] drm_pci_init+0x115/0x130
[    1.200793]  [<ffffffff818bb276>] ? ftrace_define_fields_drm_vblank_event+0x69/0x69
[    1.200794]  [<ffffffff818bb2dc>] i915_init+0x66/0x68
[    1.200796]  [<ffffffff8188edb2>] do_one_initcall+0x7b/0x10f
[    1.200798]  [<ffffffff8188ef7a>] kernel_init_freeable+0x134/0x1c1
[    1.200800]  [<ffffffff8188e80b>] ? do_early_param+0x8a/0x8a
[    1.200802]  [<ffffffff814943a0>] ? rest_init+0x80/0x80
[    1.200803]  [<ffffffff814943ae>] kernel_init+0xe/0xf0
[    1.200805]  [<ffffffff814a866c>] ret_from_fork+0x7c/0xb
[    1.200806]  [<ffffffff814943a0>] ? rest_init+0x80/0x80
[    1.200809] ---[ end trace 2d08f775911e9ce1 ]---
Comment 1 Chris Wilson 2013-06-12 12:52:58 UTC
Created attachment 80725 [details]
dmesg
Comment 2 Chris Wilson 2013-06-12 12:56:45 UTC
Looks like we failed to properly mark the CRTC as disabled upon takeover and so try to turn things off that were never on, upsetting our bookkeeping. Looks inconsequential, just paranoid.
Comment 3 Chris Wilson 2013-06-12 14:12:00 UTC
*** Bug 65674 has been marked as a duplicate of this bug. ***
Comment 4 Chris Wilson 2013-06-12 14:15:08 UTC
Fixed with refcount reconstruction in danvet/stuff.
Comment 5 Daniel Vetter 2013-06-13 07:39:51 UTC
... which is now merged (or at least the part that fixes the refcount mismatches).


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.